--- a/about.html
+++ b/about.html
@@ -67,9 +67,7 @@
                         </ul>
                     </div>
                     <div class="story-image">
-                        <div class="placeholder-image">
-                            <p>Team planting native trees</p>
-                        </div>
+                        <img src="https://images.unsplash.com/photo-1574263867128-9c1b5b1d3ecf?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Conservation team planting native seedlings in a forest restoration project" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -107,7 +105,7 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <div class="placeholder-image">Photo</div>
+                            <img src="https://media.licdn.com/dms/image/v2/C5603AQFDcgtxE1VqIw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1516502548853?e=2147483647&v=beta&t=rbwqU5lRDFsL3GFWgJtQ8pQWSRoLp-duNdOX5ETaMrA" alt="Richard Suhr - Founder & Strategic Advisor" loading="lazy">
                         </div>
                         <h3>Richard Suhr</h3>
                         <p class="member-role">Founder & Strategic Advisor</p>
@@ -115,7 +113,7 @@
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
-                            <div class="placeholder-image">Photo</div>
+                            <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="James Robertson - Agricultural Partnerships" loading="lazy">
                         </div>
                         <h3>James Robertson</h3>
                         <p class="member-role">Agricultural Partnerships</p>
@@ -123,7 +121,7 @@
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
-                            <div class="placeholder-image">Photo</div>
+                            <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?q=80&w=761&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Dr. Lisa Chen - Research & Monitoring" loading="lazy">
                         </div>
                         <h3>Dr. Lisa Chen</h3>
                         <p class="member-role">Research & Monitoring</p>
