--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="placeholder-image">
-                    <p>Native Forest Landscape Image</p>
-                </div>
+                <img src="https://plus.unsplash.com/premium_photo-1667867672626-3570589f7c29?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Lush native New Zealand forest with mature native trees and ferns creating a natural ecosystem" loading="lazy">
             </div>
         </section>
 
