--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                         </ul>
                     </div>
                     <div class="story-image">
-                        <img src="https://images.unsplash.com/photo-1574263867128-9c1b5b1d3ecf?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Conservation team planting native seedlings in a forest restoration project" loading="lazy">
+                        <img src="https://plus.unsplash.com/premium_photo-1679366305583-17d6e894d54c?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Team planting native trees in restoration project" loading="lazy">
                     </div>
                 </div>
             </div>
