--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
                         <div class="member-photo">
                             <img src="https://media.licdn.com/dms/image/v2/C5603AQFDcgtxE1VqIw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1516502548853?e=2147483647&v=beta&t=rbwqU5lRDFsL3GFWgJtQ8pQWSRoLp-duNdOX5ETaMrA" alt="Mitch Gerr - Founder & Strategic Advisor" loading="lazy">
                         </div>
-                        <h3>Richard Suhr</h3>
+                        <h3>Mitch Kerr</h3>
                         <p class="member-role">Founder & Strategic Advisor</p>
                         <p>Former family office principal and strategic consultant with 15+ years advising on sustainable land investments and environmental stewardship initiatives.</p>
                     </div>
