--- a/about.html
+++ b/about.html
@@ -105,11 +105,11 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <div class="member-photo">
-                            <img src="https://media.licdn.com/dms/image/v2/C5603AQFDcgtxE1VqIw/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1516502548853?e=2147483647&v=beta&t=rbwqU5lRDFsL3GFWgJtQ8pQWSRoLp-duNdOX5ETaMrA" alt="Mitch Gerr - Founder & Strategic Advisor" loading="lazy">
+                            <img src="https://images.unsplash.com/photo-1533518463841-d62e1fc91373?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Mitch Kerr - Founder & Strategic Advisor" loading="lazy">
                         </div>
                         <h3>Mitch Kerr</h3>
                         <p class="member-role">Founder & Strategic Advisor</p>
-                        <p>Former family office principal and strategic consultant with 15+ years advising on sustainable land investments and environmental stewardship initiatives.</p>
+                        <p>Former professional cricketer turned environmental advocate with deep roots in New Zealand's farming community and a passion for sustainable land management.</p>
                     </div>
                     <div class="team-member">
                         <div class="member-photo">
